card overflow fix

--- a/movie-app/css/style.css
+++ b/movie-app/css/style.css
@@ -216,7 +216,7 @@ span {
 }
 #scroll-menu{
     position: relative;
-    height: 430px;
+    height: 450px;
     overflow: hidden;
 }
 .scroll-header{
